force-app/main/default/objects/Azure_Archive_Config__mdt/Azure_Archive_Config__mdt.object-meta.xml
<CustomObject>
    <description>One row per in-scope object – retention days, closed-state values, batch enabled flag, dashboard cap</description>
    <label>Azure Archive Config</label>
    <pluralLabel>Azure  Archive Config</pluralLabel>
</CustomObject>