force-app/main/default/objects/Azure_Archive_Config__mdt/fields/Batch_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Batch_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Kill-switch per object</description>
    <label>Batch Enabled</label>
    <type>Checkbox</type>
</CustomField>