force-app/main/default/objects/Azure_Archive_Config__mdt/fields/Batch_Scope_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Scope_Size__c</fullName>
    <description>Records per Batchable chunk; default 200</description>
    <label>Batch Scope Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>