force-app/main/default/objects/Azure_Archive_Config__mdt/fields/Closed_State_Values__c.field-meta.xml
<CustomField>
    <fullName>Closed_State_Values__c</fullName>
    <description>SOQL where clause fragment for closed-parent test</description>
    <label>Closed State Values</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>