force-app/main/default/objects/Azure_Archive_Config__mdt/fields/Dashboard_Max_Days_Back__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Max_Days_Back__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Only on the row for UserTrackingDashboard config; default 90</description>
    <label>Dashboard Max Days Back</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>