force-app/main/default/objects/Azure_Archive_Config__mdt/fields/Migration_Delete_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Migration_Delete_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migration Delete Enabled</label>
    <type>Checkbox</type>
</CustomField>