force-app/main/default/objects/Azure_Archive_Config__mdt/fields/Read_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Read_Named_Credential__c</fullName>
    <description>Developer name of the Named Credential used for the archive READ (GET) operation. Leave blank to use the default AzureArchiveRetrieval_NC defined in ArchiveReadService. Reads must NOT use the write credential: AzureDataArchive_NC carries the Entra external credential, and the gateway forwards its Authorization header to Table Storage, which rejects any Authorization header with 400 InvalidAuthenticationInfo. The retrieval credential authenticates with an Ocp-Apim-Subscription-Key header instead and sets Generate Authorization Header to false.</description>
    <inlineHelpText>Named Credential for reading archived records, e.g. AzureArchiveRetrieval_NC. Blank = use code default.</inlineHelpText>
    <label>Read Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>