force-app/main/default/objects/Azure_Archive_Config__mdt/fields/Read_Path__c.field-meta.xml
<CustomField>
    <fullName>Read_Path__c</fullName>
    <description>Path appended to the read Named Credential for the archive READ (GET) operation. The archive exposes one route per object under the gateway&apos;s /retrieve base, so this is the object segment - e.g. /OrderLineItems. Leave blank to use the per-object default in ArchiveReadService, which currently knows only Order_Line_Item__c =&gt; /OrderLineItems. An object with neither a configured nor a default path is treated as having no published route, and the report falls back to the Archival Log index for it.</description>
    <inlineHelpText>GET path for reading this object&apos;s archived records, e.g. /OrderLineItems. Blank = use code default.</inlineHelpText>
    <label>Read Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>