force-app/main/default/objects/Azure_Archive_Config__mdt/fields/Report_Columns__c.field-meta.xml
<CustomField>
    <fullName>Report_Columns__c</fullName>
    <description>Comma-separated field API names to show as columns in the Archived Data report for this object. Leave blank to use the per-object defaults in ArchivedRecordsController.</description>
    <inlineHelpText>Comma-separated field API names for the report columns. Blank = use code defaults.</inlineHelpText>
    <label>Report Columns</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>