force-app/main/default/objects/Azure_Archive_Config__mdt/fields/Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Retention_Days__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Days since CreatedDate before eligible; default 90</description>
    <label>Retention Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>