force-app/main/default/objects/Azure_Archive_Config__mdt/fields/Soft_Archive_Days__c.field-meta.xml
<CustomField>
    <fullName>Soft_Archive_Days__c</fullName>
    <defaultValue>7</defaultValue>
    <description>Days between soft-archive and delete; default 7</description>
    <label>Soft Archive Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>