force-app/main/default/objects/Azure_Archive_Config__mdt/listViews/Custom.listView-meta.xml
<ListView>
    <fullName>Custom</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Batch_Enabled__c</columns>
    <columns>Retention_Days__c</columns>
    <columns>Closed_State_Values__c</columns>
    <columns>Batch_Scope_Size__c</columns>
    <filterScope>Everything</filterScope>
    <label>Custom</label>
</ListView>